<resources>
    <string name="app_name">LoomLogic</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="submit">Submit</string>
    <string name="general_error">Something went wrong</string>
    <string name="internet_error">You are currently ofline</string>
    <string name="Connect">Connect</string>
    <string name="agent">Agent</string>
    <string name="lender">Lender</string>
    <string name="cancel">Cancel</string>
    <string name="searchHint">Search</string>
    <string name="ok">Ok</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="no_results">No Results</string>
    <string name="reset">Reset</string>
    <string name="call_error">Sorry, you can\'t make a call</string>
    <string name="map_error">Sorry, you don\'t have a map</string>
    <string name="map_open_dialog_title">Open Map?</string>
    <string name="map_open_dialog_message">This action will open default map application</string>
    <string name="copy_text">Copy to Clipboard</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="logIn">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="forgotPasword">Forgot password</string>
    <string name="email_error">Incorrect Email</string>
    <string name="password_error">Password is too short (minimum is 3 characters)</string>
    <string name="forgotPasswordTitle">FORGOT PASSWORD ?</string>
    <string name="forgotPasswordMsg">Enter your e-mail address below to reset your password</string>
    <string name="forgotPasswordCheckEmail">Check your Email.\nWe sent you a new password</string>
    <string name="resetPasswordTitle">RESET PASSWORD</string>
    <string name="resetPasswordMsg">Enter your new password</string>
    <string name="createAccountTitle">CREATE ACCOUNT</string>
    <string name="signIn">Sign in</string>
    <string name="Continue">Continue</string>
    <string name="agreeTerms">By signing up, I agree to LoomLogic\'s</string>
    <string name="termsConditions">Terms \u0026 Conditions</string>
    <string name="and">and</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="phone">Phone</string>
    <string name="license">License</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="leads">Leads</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>
    <string name="buyers">buyers</string>
    <string name="sellers">sellers</string>
    <string name="leadMenuItem_Leads">Leads</string>
    <string name="leadMenuItem_Lender">Lender</string>
    <string name="leadMenuItem_Shopping">Shopping</string>
    <string name="leadMenuItem_Contract">Contract</string>
    <string name="leadMenuItem_Closed">Closed</string>
    <string name="leadMenuItem_ComingSoon">Coming Soon</string>
    <string name="leadMenuItem_Active">Active</string>
    <string name="leadMenuItem_Withdraw">Withdraw</string>
    <string name="leadMenuItem_Pending">Pending</string>
    <string name="create_new_lead_fromContact">From Contact</string>
    <string name="create_new_lead">Create New</string>
    <string name="lead_menu_owner_my">My Leads</string>
    <string name="lead_menu_owner_team">Team Leads</string>
    <string name="lead_call_twillio">Twillio</string>
    <string name="lead_call_system">Phone</string>
    <string name="lead_message_sms">SMS</string>
    <string name="lead_message_email">Email</string>
    <string name="lead_message_note">Note</string>
    <string name="lead_menu">Menu</string>
    <string name="lead_filter">Filter</string>
    <string name="lead_tab_name_all">All</string>
    <string name="lead_tab_name_new">New</string>
    <string name="lead_tab_name_engaged">Engaged</string>
    <string name="lead_tab_name_future">Future</string>
    <string name="lead_tab_name_appointment">Appointment</string>
    <string name="lead_tab_name_application">Application</string>
    <string name="lead_leads_title">Leads</string>
    <string name="lead_leads_lender_title">Sent to Lender </string>
    <string name="lead_leads_shopping_title">Shopping</string>
    <string name="lead_leads_contract_title">Contract</string>
    <string name="lead_leads_closed_title">Closed</string>
    <string name="leads_filter_header_filter">Filter</string>
    <string name="leads_filter_header_sort">Sort</string>
    <string name="leads_filter_all">All</string>
    <string name="leads_filter_financing">Financing</string>
    <string name="leads_filter_cash">Cash Buyer</string>
    <string name="leads_sort_nameAZ">Name (A-Z)</string>
    <string name="leads_sort_nameZA">Name (Z-A)</string>
    <string name="leads_sort_escrowAsc">Escrow (asc)</string>
    <string name="leads_sort_escrowDesc">Escrow (desc)</string>
    <string name="leads_sort_date">Date (newest first)</string>
    <string name="leads_filter_show_results">Show Results (%d)</string>
    <string name="lead_details_tab_details">Details</string>
    <string name="lead_details_tab_messages">Messages</string>
    <string name="lead_details_tab_dates">Dates</string>
    <string name="lead_details_tab_tasks">Tasks</string>
    <string name="lead_details_tab_documents">Documents</string>
    <string name="lead_details_no_social">Social Media Profile</string>
    <string name="lead_details_social_info">Age and Gender</string>
    <string name="lead_details_social_lives">Lives in</string>
    <string name="lead_details_social_title">Title</string>
    <string name="btn_change_status">Change status</string>
    <string name="btn_send">Send</string>
    <string name="btn_confirm">Confirm</string>
    <string name="lead_details_participants">Participants</string>
    <string name="lead_details_contract_details">Contract Details</string>
    <string name="lead_details_transactions">Transactions (%d)</string>
    <string name="lead_details_dates">Dates</string>
    <string name="lead_participant_role_agent">Agent</string>
    <string name="lead_participant_role_owner">Owner</string>
    <string name="lead_participant_role_lender">Lender</string>
    <string name="lead_participant_role_client">Client</string>
    <string name="lead_contract_address">Address</string>
    <string name="lead_contract_purchase">Purchase</string>
    <string name="lead_contract_commissions">Commissions</string>
    <string name="lead_contract_gross">Gross</string>
    <string name="lead_transaction_address">Address</string>
    <string name="lead_searching_criteria">Searching Criteria</string>
    <string name="lead_searching_criteria_bedrooms">Bedrooms</string>
    <string name="lead_searching_criteria_bathroom">Bathroom</string>
    <string name="lead_searching_criteria_area">Area</string>
    <string name="lead_searching_criteria_purchase">Purchase</string>
    <string name="lead_searching_pre_approval_details">Pre-Approval Details</string>
    <string name="lead_searching_pre_approval_purchase">Purchase Power</string>
    <string name="lead_searching_pre_approval_downpayment">Downpayment</string>
    <string name="lead_searching_pre_approval_loan">Loan Type</string>
    <string name="lead_searching_pre_approval_interest">Interest Rate</string>
    <string name="lead_searching_looking_area">Looking for property in</string>
    <string name="lead_settings_title">Lead Settings</string>
    <string name="lead_settings_contact_info">Contact Information</string>
    <string name="lead_settings_participants">Participants</string>
    <string name="lead_settings_contract">Contract Details</string>
    <string name="lead_edit_title">Edit Contact</string>
    <string name="lead_edit_participants_title">Edit Participants</string>
    <string name="lead_add_participant_title">Add Participant</string>
    <string name="lead_edit_contract_title">Edit Contract Details</string>
    <string name="lead_edit_contract_address_title">Property Address</string>
    <string name="lead_edit_contract_hint_address">Address</string>
    <string name="lead_edit_contract_hint_unit">Unit #</string>
    <string name="lead_edit_contract_hint_state">State</string>
    <string name="lead_edit_contract_hint_city">City</string>
    <string name="lead_edit_contract_hint_zip">Zip</string>
    <string name="lead_edit_contract_details_title">Contract Details</string>
    <string name="lead_edit_contract_hint_price">Purchase Price</string>
    <string name="lead_edit_contract_hint_commission">Commission</string>
    <string name="lead_edit_contract_hint_gross">Gross</string>
    <string name="lead_edit_contract_hint_financing_type">Financing Type</string>
    <string name="financing_types_list_title">Financing Type</string>
    <string name="create_new_lead_title">Add Contact</string>
    <string name="create_new_lead_address_title">Property Address</string>
    <string name="create_new_lead_hint_name">Name</string>
    <string name="create_new_lead_hint_additionalName">Additional Name</string>
    <string name="create_new_lead_hint_phone">Phone</string>
    <string name="create_new_lead_hint_email">Email</string>
    <string name="create_new_lead_hint_source">Source</string>
    <string name="create_new_lead_hint_address">Street</string>
    <string name="create_new_lead_hint_unit">Unit</string>
    <string name="create_new_lead_hint_state">State</string>
    <string name="create_new_lead_hint_city">City</string>
    <string name="create_new_lead_hint_zip">Zip Code</string>
    <string name="create_new_lead_hint_note">Note</string>
    <string name="create_new_lead_enableDripCompaigns">Enable Drip Compaigns</string>
    <string name="create_new_lead_source_error">Source can\'t be blank</string>
    <string name="create_new_lead_email_error">Clients email is invalid</string>
    <string name="create_new_lead_email_phone_error">Phone number or email address are required.</string>
    <string name="create_new_lead_source_title">Source</string>
    <string name="create_new_lead_state_title">State</string>
    <string name="create_new_lead_source_add_new_title">Add New Source</string>
    <string name="create_new_lead_state_add_new_hint">Input Source Name</string>
    <string name="create_new_lead_dialog_title">Add New Leads</string>
    <string name="create_new_lead_dialog_create">Create</string>
    <string name="create_new_lead_dialog_send_to_lender">Send to Lender</string>
    <string name="create_new_lead_dialog_send_to_agent">Send to Agent</string>
    <string name="create_new_lead_dialog_send_to_team">Send to Team</string>
    <string name="create_new_lead_send_to_agent_title">Send to Agent</string>
    <string name="create_new_lead_send_to_lender_title">Send to Lender</string>
    <string name="create_new_lead_send_to_agent">Agent</string>
    <string name="create_new_lead_send_to_lender">Lender</string>
    <string name="create_new_lead_send_future">Send Future Lead</string>
    <string name="create_new_lead_send_to_specify_ime">Specify Time</string>
    <string name="create_new_lead_send_to_time">By default lead will be sent at current time</string>
    <string name="create_new_lead_send_to_claim">Claim Feature</string>
    <string name="create_new_lead_need_agent_error">Agent can\'t be blank</string>
    <string name="create_new_lead_need_lender_error">Lender can\'t be blank</string>
    <string name="select_agent">Select Agent</string>
    <string name="select_lender">Select Lender</string>
    <string name="create_new_lead_send_to_agent_success">Lead sent to Agent</string>
    <string name="create_new_lead_send_to_lender_success">Lead sent to Lender</string>
</resources>