<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/lead_edit_contract_address_title"
                android:textColor="#798591"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_shadow"
                android:orientation="vertical">

                <com.loomlogic.view.LLEditTextWithHint
                    android:id="@+id/et_editContract_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lead_edit_contract_hint_address"
                    android:inputType="textCapWords" />

                <View style="@style/MainLeadDivider" />

                <com.loomlogic.view.LLEditTextWithHint
                    android:id="@+id/et_editContract_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lead_edit_contract_hint_unit"
                    android:inputType="number" />

                <View style="@style/MainLeadDivider" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <com.loomlogic.view.LLEditTextWithHint
                        android:id="@+id/et_editContract_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_arrow_right"
                        android:enabled="false"
                        android:hint="@string/lead_edit_contract_hint_state" />

                    <View
                        android:id="@+id/view_editContract_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?selectableItemBackground"
                        android:clickable="true" />
                </FrameLayout>

                <View style="@style/MainLeadDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.loomlogic.view.LLEditTextWithHint
                        android:id="@+id/et_editContract_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/lead_edit_contract_hint_city"
                        android:inputType="textCapWords" />

                    <View
                        style="@style/MainLeadDivider"
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <com.loomlogic.view.LLEditTextWithHint
                        android:id="@+id/et_editContract_zip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/lead_edit_contract_hint_zip"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/lead_edit_contract_details_title"
                android:textColor="#798591"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_shadow"
                android:orientation="vertical">

                <com.loomlogic.view.LLEditTextWithHint
                    android:id="@+id/et_editContract_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_contract_dollar"
                    android:hint="@string/lead_edit_contract_hint_price"
                    android:inputType="number" />

                <View style="@style/MainLeadDivider" />

                <com.loomlogic.view.LLEditTextWithHint
                    android:id="@+id/et_editContract_commission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_contract_percent"
                    android:hint="@string/lead_edit_contract_hint_commission"
                    android:inputType="numberDecimal" />

                <View style="@style/MainLeadDivider" />

                <com.loomlogic.view.LLEditTextWithHint
                    android:id="@+id/et_editContract_gross"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_contract_dollar"
                    android:hint="@string/lead_edit_contract_hint_gross"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

                <View style="@style/MainLeadDivider" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <com.loomlogic.view.LLEditTextWithHint
                        android:id="@+id/et_editContract_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_arrow_right"
                        android:hint="@string/lead_edit_contract_hint_financing_type" />

                    <View
                        android:id="@+id/view_editContract_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?selectableItemBackground"
                        android:clickable="true" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>