<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_signUp_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_signUp_step2_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_signUp_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:button="@drawable/radio_btn"
            android:checked="true"
            android:paddingLeft="15dp"
            android:text="@string/agent"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_signUp_lender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:button="@drawable/radio_btn"
            android:checked="false"
            android:paddingLeft="15dp"
            android:text="@string/lender"
            android:textColor="@color/white_transparent_50"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_signUp_step2_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_signUp_phone"
            style="@style/SignInEditText"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_signUp_license"
            style="@style/SignInEditText"
            android:drawableLeft="@drawable/ic_license"
            android:hint="@string/license"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signUp_submit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/ll_signUp_step2_container"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_blue_btn"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>